fixed formatting right whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,14 @@
     padding: 0;
     margin: 0;
 }
+
+/*
+* To prevent alignment problem on iOS/Safari, add a standardized body. See https://stackoverflow.com/questions/4617872/white-space-showing-up-on-right-side-of-page-when-background-image-should-extend
+*/
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
